<?xml version="1.0"?>
<package format="2">
  <name>gs_example</name>
  <version>1.5.3</version>
  <description>The gs_example package</description>

  <maintainer email="ilya@eadsoft.com">Ilya Danilenko</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
